2006-11-28    <drblast@users.sourceforge.net>

	* Interpreter.cpp (execByteCode): Changed variable window updates to only occur in debug mode.  Otherwise this is a severe performance hit for programs updating many variables in tight loops.

	* VariableWin.cpp (clearTable): Added Variable Watch window.

2006-11-26    <drblast@users.sourceforge.net>

	* MainWindow.cpp (QMainWindow): Added two items to view menu to enable/disable text and graphics output windows.

2006-11-20    <drblast@users.sourceforge.net>

	* Interpreter.cpp (execByteCode): Merged file ops and changed them to work more simply.
	  Changed array printing to print pointer address instead of int, which should fix the 64 bit compile problem.

2006-11-19    <fhendrikx@users.sourceforge.net>

	* Added file operations "open", "read", "write", "close". The read and write functions work on a token basis. EOF is returned by returning an empty token.

	* Added code to test new functions "fileops1.kbs" (and 2 and 3). 

2006-11-17    <fhendrikx@users.sourceforge.net>

	* Added string "length" function and sample code "length.kbs"

	* Added alternative spelling for "color" function: "colour"

	* Added "poly" function and sample code "polygon.kbs"

2006-11-07    <drblast@users.sourceforge.net>

	* LEX\basicParse.y: Fixed rather important memory allocation bug that affected large programs that used lots of if statements.

	* Interpreter.cpp (execByteCode): Fixed bug 1589686

2006-11-03    <drblast@users.sourceforge.net>

	* Interpreter.cpp (compileProgram): Changed the way the interpreter keeps track of line numbers.  Now there's a CURRLINE bytecode which is executed every time the line changes. Also added step-by-step debugging.

2006-11-02    <drblast@users.sourceforge.net>

	* Interpreter.cpp (execByteCode): Printing of floating point instead of integers fixed.

2006-11-01    <drblast@users.sourceforge.net>

	* Interpreter.cpp (execByteCode): Added OP_LINE, which draws lines.
